Toy Problem classification model

--- a/gpytorch_classification_regression.ipynb
+++ b/gpytorch_classification_regression.ipynb
@@ -31,8 +31,10 @@
     "\n",
     "    u = torch.rand(1)\n",
     "    data_fn = lambda x, y: 1 * torch.sin(0.15 * u * 3.1415 * (x + y)) + 1\n",
+    "    # data_fn = lambda x, y: torch.cos(x)*torch.cos(y) - torch.sin(x)*torch.sin(y)\n",
     "    latent_fn = data_fn(x, y)\n",
     "    z = torch.round(latent_fn).long().squeeze()\n",
+    "    # z = torch.heaviside(latent_fn - 0.5, torch.zeros(latent_fn.shape)).long().squeeze()\n",
     "    return torch.cat((x,y),dim=1), z, data_fn"
    ]
   },
@@ -47,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f55f3a27b00>"
+       "<matplotlib.collections.PathCollection at 0x7f6bf09bb980>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x7f0b0e269d60>"
+       "<matplotlib.contour.QuadContourSet at 0x7f6bf07becc0>"
       ]
      },
      "execution_count": 6,
