classification GT data

--- a/classify_GTData.ipynb
+++ b/classify_GTData.ipynb
@@ -12,6 +12,7 @@
     "import gpytorch\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
+    "import random\n",
     "\n",
     "from gpytorch.models import ExactGP\n",
     "from gpytorch.likelihoods import DirichletClassificationLikelihood\n",
@@ -406,7 +407,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Group ID</th>\n",
+       "      <th>Manufacturability</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>#</th>\n",
+       "      <th>--</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Group ID Manufacturability\n",
+       "#                       --\n",
+       "1                        1\n",
+       "2                        0\n",
+       "3                        0\n",
+       "4                        0\n",
+       "5                        1\n",
+       "6                        1\n",
+       "7                        1\n",
+       "8                        1\n",
+       "9                        1\n",
+       "10                       1\n",
+       "11                       1\n",
+       "12                       1\n",
+       "13                       1\n",
+       "14                       1\n",
+       "15                       0\n",
+       "16                       1\n",
+       "17                       1\n",
+       "18                       0\n",
+       "19                       1\n",
+       "20                       0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -434,16 +587,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make torch tensors\n"
+    "# select a random point as a validation point\n",
+    "# validation_idx = random.choice(x_pd.index.to_list()) #group id of validation point\n",
+    "validation_idx = 20\n",
+    "\n",
+    "train_x_pd = x_pd.drop(validation_idx)\n",
+    "train_y_pd = y_pd.drop(validation_idx)\n",
+    "\n",
+    "test_x_pd = x_pd.loc[validation_idx, :]\n",
+    "test_y_pd = y_pd.loc[validation_idx, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make torch tensors\n",
+    "train_x = torch.tensor(train_x_pd.values, dtype=torch.long)\n",
+    "train_y = torch.tensor(train_y_pd.values, dtype=torch.long).squeeze()\n",
+    "\n",
+    "# test_x = torch.tensor(test_x_pd.values, dtype=torch.long)\n",
+    "# test_y = torch.tensor(test_y_pd.values, dtype=torch.long).squeeze()\n",
+    "test_x = torch.tensor(x_pd.values, dtype=torch.long)\n",
+    "test_y = torch.tensor(y_pd.values, dtype=torch.long).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,6 +644,199 @@
     "likelihood = DirichletClassificationLikelihood(train_y, learn_additional_noise=True)\n",
     "model = DirichletGPModel(train_x, likelihood.transformed_targets, likelihood, num_classes=likelihood.num_classes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter 1/50 - Loss: 7.107   lengthscale: 0.693  \n",
+      "Iter 11/50 - Loss: 5.852   lengthscale: 0.693  \n",
+      "Iter 21/50 - Loss: 5.300   lengthscale: 0.693  \n",
+      "Iter 31/50 - Loss: 5.000   lengthscale: 0.693  \n",
+      "Iter 41/50 - Loss: 4.853   lengthscale: 0.693  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is for running the notebook in our testing framework\n",
+    "import os\n",
+    "smoke_test = ('CI' in os.environ)\n",
+    "training_iter = 2 if smoke_test else 50\n",
+    "\n",
+    "\n",
+    "# Find optimal model hyperparameters\n",
+    "model.train()\n",
+    "likelihood.train()\n",
+    "\n",
+    "# Use the adam optimizer\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.1)  # Includes GaussianLikelihood parameters\n",
+    "\n",
+    "# \"Loss\" for GPs - the marginal log likelihood\n",
+    "mll = gpytorch.mlls.ExactMarginalLogLikelihood(likelihood, model)\n",
+    "\n",
+    "for i in range(training_iter):\n",
+    "    # Zero gradients from previous iteration\n",
+    "    optimizer.zero_grad()\n",
+    "    # Output from model\n",
+    "    output = model(train_x)\n",
+    "    # Calc loss and backprop gradients\n",
+    "    loss = -mll(output, likelihood.transformed_targets).sum()\n",
+    "    loss.backward()\n",
+    "    if i % 10 == 0:\n",
+    "        print('Iter %d/%d - Loss: %.3f   lengthscale: %.3f  ' % (\n",
+    "            i + 1, training_iter, loss.item(),\n",
+    "            model.covar_module.base_kernel.lengthscale.mean().item(),\n",
+    "            # model.likelihood.second_noise_covar.noise.mean().item()\n",
+    "        ))\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval() # calculates latent variable 'f' (logits) bcoz we used DirichletGP\n",
+    "likelihood.eval()\n",
+    "\n",
+    "# test_x = torch.tensor(test_x.numpy().reshape((1,8)))\n",
+    "\n",
+    "with gpytorch.settings.fast_pred_var(), torch.no_grad():\n",
+    "    test_dist = model(test_x)   # gives a multi-variate normal distribution at each test_x point\n",
+    "                                # number of variables = number of classes\n",
+    "\n",
+    "    pred_means = test_dist.loc  # loc method comes from pytorch distrubutions; is equal to mean \n",
+    "    pred_stddevs = test_dist.stddev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate expected value of class probabilites; this is done by sampling 256 points and taking average\n",
+    "pred_samples = test_dist.sample(torch.Size((256,))).exp()\n",
+    "probabilities = (pred_samples / pred_samples.sum(-2, keepdim=True)).mean(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "validation idx -  20\n",
+      "Probability of being in class 0 (infeasible) =  [0.05156831 0.2582061  0.26293087 0.2622359  0.04506535 0.04399322\n",
+      " 0.07073247 0.05131854 0.05458558 0.06896147 0.05552393 0.04968158\n",
+      " 0.05841761 0.12203427 0.267766   0.04547495 0.03142402 0.25062433\n",
+      " 0.04881067 0.08037598]\n",
+      "Probability of being in class 1 (feasible) =  [0.94843173 0.74179393 0.73706913 0.7377641  0.95493466 0.95600677\n",
+      " 0.9292676  0.9486815  0.9454145  0.9310385  0.94447607 0.9503184\n",
+      " 0.94158244 0.87796575 0.732234   0.9545251  0.968576   0.7493757\n",
+      " 0.9511893  0.919624  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"validation idx - \", validation_idx)\n",
+    "print(\"Probability of being in class 0 (infeasible) = \", probabilities[0].numpy())\n",
+    "print(\"Probability of being in class 1 (feasible) = \", probabilities[1].numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"predicted class = \", pred_means.max(0)[1].item())\n",
+    "# print(\"Experimentally found class = \", y_pd.loc[validation_idx, :].values[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.05156831, 0.2582061 , 0.26293087, 0.2622359 , 0.04506535,\n",
+       "       0.04399322, 0.07073247, 0.05131854, 0.05458558, 0.06896147,\n",
+       "       0.05552393, 0.04968158, 0.05841761, 0.12203427, 0.267766  ,\n",
+       "       0.04547495, 0.03142402, 0.25062433, 0.04881067, 0.08037598],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilities[0].numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.94843173, 0.74179393, 0.73706913, 0.7377641 , 0.95493466,\n",
+       "       0.95600677, 0.9292676 , 0.9486815 , 0.9454145 , 0.9310385 ,\n",
+       "       0.94447607, 0.9503184 , 0.94158244, 0.87796575, 0.732234  ,\n",
+       "       0.9545251 , 0.968576  , 0.7493757 , 0.9511893 , 0.919624  ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilities[1].numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_means.max(0)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
