Feasibility aware constrained BO toy problem

--- a/Toy_problem/gpytorch_toyProblem_combined.ipynb
+++ b/Toy_problem/gpytorch_toyProblem_combined.ipynb
@@ -542,52 +542,21 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Highest expected improvement =  0.2371640795722637\n",
-      "location of best expected point - (-1.737, 0.158)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ei_mat = ei.numpy().reshape((20,20))\n",
-    "ind_best = np.argmax(ei_mat)\n",
+    "# constrained EI calculation - feasibility aware\n",
+    "con_ei = class_probabilites[0] * ei\n",
     "\n",
-    "col_ind_best = ind_best%20\n",
-    "row_ind_best = int((ind_best - col_ind_best)/20)\n",
+    "# top 5 candidate points from constrained ei\n",
+    "top5_ind = np.argpartition(con_ei, -5)[-5:]\n",
+    "top5_ind = top5_ind[np.argsort(con_ei[top5_ind])]\n",
     "\n",
-    "best_ei_val = ei_mat[row_ind_best, col_ind_best]\n",
-    "print('Highest expected improvement = ', best_ei_val)\n",
     "\n",
-    "best_x1_loc = test_x1_mat[row_ind_best, col_ind_best]\n",
-    "best_x2_loc = test_x2_mat[row_ind_best, col_ind_best]\n",
+    "#objective function observation at best candidates\n",
+    "candidate_x2_ind = top5_ind%20\n",
+    "candidate_x1_ind = ((top5_ind - candidate_x2_ind)/20)\n",
     "\n",
-    "print(\"location of best expected point - ({0:.3f}, {1:.3f})\".format(best_x1_loc, best_x2_loc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ei at top 10 locations -  tensor([0.0351, 0.0452, 0.0500, 0.0524, 0.1226, 0.1572, 0.1611, 0.1843, 0.1952,\n",
-      "        0.2372], dtype=torch.float64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# select top 10 best points from ei\n",
-    "top10_ind = np.argpartition(ei, -10)[-10:]\n",
-    "top10_ind = top10_ind[np.argsort(ei[top10_ind])]\n",
-    "\n",
-    "print(\"ei at top 10 locations - \", ei[top10_ind])"
+    "cdn_x = test_x[top5_ind, :]"
    ]
   },
   {
