Dirichlet classification on GT data

--- a/gp-classification/classify_GTData.ipynb
+++ b/gp-classification/classify_GTData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = r'data/olhs_run1.xlsx'\n",
+    "filename = r'../data/olhs_run1.xlsx'\n",
     "x_pd = pd.read_excel(filename, sheet_name='Initial Design (OLHS)', header=[0,1], index_col=[0])\n",
     "y_pd = pd.read_excel(filename, sheet_name='feasibility', header=[0,1], index_col=[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "20                                  93.684211            90.526316  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "20                       0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -587,13 +587,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#normalize input features - unit hypercube\n",
+    "# xmin = x_pd.min(axis=0)\n",
+    "# xmax = x_pd.max(axis=0)\n",
+    "# x_pd_normal = (x_pd - xmin)/(xmax - xmin)\n",
+    "xmeans = x_pd.mean(axis=0)\n",
+    "xstddv = x_pd.std(axis=0)\n",
+    "x_pd_normal = (x_pd - xmeans)/xstddv\n",
+    "x_pd = x_pd_normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# select a random point as a validation point\n",
     "# validation_idx = random.choice(x_pd.index.to_list()) #group id of validation point\n",
-    "validation_idx = 1\n",
+    "# validation_idx = 1\n",
+    "#80:20 split for train-validation data - manual selection\n",
+    "validation_idx = [1, 7, 15]\n",
     "\n",
     "train_x_pd = x_pd.drop(validation_idx)\n",
     "train_y_pd = y_pd.drop(validation_idx)\n",
@@ -604,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,28 +655,43 @@
     "    def forward(self, x):\n",
     "        mean_x = self.mean_module(x)\n",
     "        covar_x = self.covar_module(x)\n",
-    "        return gpytorch.distributions.MultivariateNormal(mean_x, covar_x)\n",
-    "\n",
+    "        return gpytorch.distributions.MultivariateNormal(mean_x, covar_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# initialize likelihood and model\n",
     "# we let the DirichletClassificationLikelihood compute the targets for us\n",
-    "likelihood = DirichletClassificationLikelihood(train_y, learn_additional_noise=True)\n",
+    "likelihood = DirichletClassificationLikelihood(train_y, learn_additional_noise=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = DirichletGPModel(train_x, likelihood.transformed_targets, likelihood, num_classes=likelihood.num_classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 1/50 - Loss: 7.107   lengthscale: 0.693  \n",
-      "Iter 11/50 - Loss: 5.925   lengthscale: 0.693  \n",
-      "Iter 21/50 - Loss: 5.419   lengthscale: 0.693  \n",
-      "Iter 31/50 - Loss: 5.193   lengthscale: 0.693  \n",
-      "Iter 41/50 - Loss: 5.096   lengthscale: 0.693  \n"
+      "Iter 1/50 - Loss: 7.075   lengthscale: 0.693  \n",
+      "Iter 11/50 - Loss: 5.642   lengthscale: 1.268  \n",
+      "Iter 21/50 - Loss: 5.271   lengthscale: 1.558  \n",
+      "Iter 31/50 - Loss: 5.138   lengthscale: 1.622  \n",
+      "Iter 41/50 - Loss: 5.079   lengthscale: 1.542  \n"
      ]
     }
    ],
@@ -698,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,45 +743,44 @@
     "with gpytorch.settings.fast_pred_var(), torch.no_grad():\n",
     "    test_dist = model(test_x)   # gives a multi-variate normal distribution at each test_x point\n",
     "                                # number of variables = number of classes\n",
-    "\n",
-    "    pred_means = test_dist.loc  # loc method comes from pytorch distrubutions; is equal to mean \n",
-    "    pred_stddevs = test_dist.stddev"
+    "    post_pred = likelihood(test_dist)\n",
+    "    pred_means = post_pred.mean  # loc method comes from pytorch distrubutions; is equal to mean \n",
+    "    pred_stddevs = post_pred.stddev"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate expected value of class probabilites; this is done by sampling 256 points and taking average\n",
-    "pred_samples = test_dist.sample(torch.Size((256,))).exp()\n",
+    "pred_samples = test_dist.sample(torch.Size((1024,))).exp()\n",
     "probabilities = (pred_samples / pred_samples.sum(-2, keepdim=True)).mean(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "validation idx -  1\n",
-      "Probability of being in class 0 (infeasible) =  [0.24160136 0.6508564  0.6328569  0.63326824 0.07304256 0.08889221\n",
-      " 0.08082244 0.1386109  0.0915564  0.09552271 0.14063323 0.08319938\n",
-      " 0.09149434 0.13668711 0.5905938  0.0902823  0.10614344 0.589979\n",
-      " 0.09552848 0.61246604]\n",
-      "Probability of being in class 1 (feasible) =  [0.75839853 0.34914362 0.36714312 0.36673182 0.9269575  0.91110784\n",
-      " 0.91917753 0.8613891  0.9084436  0.90447736 0.8593668  0.9168006\n",
-      " 0.9085057  0.86331284 0.40940621 0.9097177  0.8938565  0.410021\n",
-      " 0.9044715  0.38753396]\n"
+      "Probability of being in class 0 (infeasible) =  [0.17156303 0.20171477 0.1142856  0.19792654 0.04563678 0.03361584\n",
+      " 0.09982245 0.1232381  0.08654256 0.0642149  0.04629537 0.11668666\n",
+      " 0.05815212 0.04215981 0.22124508 0.03609996 0.04792694 0.1551127\n",
+      " 0.02259498 0.24329813]\n",
+      "Probability of being in class 1 (feasible) =  [0.828437   0.79828525 0.88571435 0.8020735  0.9543632  0.9663842\n",
+      " 0.9001776  0.8767619  0.9134574  0.93578506 0.95370466 0.8833133\n",
+      " 0.9418479  0.95784014 0.77875495 0.9639001  0.95207304 0.84488726\n",
+      " 0.977405   0.7567019 ]\n"
      ]
     }
    ],
    "source": [
-    "print(\"validation idx - \", validation_idx)\n",
+    "# print(\"validation idx - \", validation_idx)\n",
     "print(\"Probability of being in class 0 (infeasible) = \", probabilities[0].numpy())\n",
     "print(\"Probability of being in class 1 (feasible) = \", probabilities[1].numpy())"
    ]
@@ -765,64 +797,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.24160136, 0.6508564 , 0.6328569 , 0.63326824, 0.07304256,\n",
-       "       0.08889221, 0.08082244, 0.1386109 , 0.0915564 , 0.09552271,\n",
-       "       0.14063323, 0.08319938, 0.09149434, 0.13668711, 0.5905938 ,\n",
-       "       0.0902823 , 0.10614344, 0.589979  , 0.09552848, 0.61246604],\n",
-       "      dtype=float32)"
+       "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "probabilities[0].numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.75839853, 0.34914362, 0.36714312, 0.36673182, 0.9269575 ,\n",
-       "       0.91110784, 0.91917753, 0.8613891 , 0.9084436 , 0.90447736,\n",
-       "       0.8593668 , 0.9168006 , 0.9085057 , 0.86331284, 0.40940621,\n",
-       "       0.9097177 , 0.8938565 , 0.410021  , 0.9044715 , 0.38753396],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "probabilities[1].numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0])"
-      ]
-     },
-     "execution_count": 16,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,9 +855,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "myenv",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
