Dirichlet classification success on GT Data

--- a/gp-classification/classify_GTData.ipynb
+++ b/gp-classification/classify_GTData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "20                                  93.684211            90.526316  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "20                       0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,18 +660,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# initialize likelihood and model\n",
     "# we let the DirichletClassificationLikelihood compute the targets for us\n",
-    "likelihood = DirichletClassificationLikelihood(train_y, learn_additional_noise=True)"
+    "likelihood = DirichletClassificationLikelihood(train_y, learn_additional_noise=False, alpha_epsilon=1e-4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,18 +680,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 1/50 - Loss: 7.075   lengthscale: 0.693  \n",
-      "Iter 11/50 - Loss: 5.642   lengthscale: 1.268  \n",
-      "Iter 21/50 - Loss: 5.271   lengthscale: 1.558  \n",
-      "Iter 31/50 - Loss: 5.138   lengthscale: 1.622  \n",
-      "Iter 41/50 - Loss: 5.079   lengthscale: 1.542  \n"
+      "Iter 1/50 - Loss: 12.778   lengthscale: 0.693  \n",
+      "Iter 11/50 - Loss: 10.804   lengthscale: 1.222  \n",
+      "Iter 21/50 - Loss: 10.037   lengthscale: 1.262  \n",
+      "Iter 31/50 - Loss: 9.391   lengthscale: 0.984  \n",
+      "Iter 41/50 - Loss: 8.887   lengthscale: 0.742  \n"
      ]
     }
    ],
@@ -731,9 +731,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gouravkumbhojkar/miniconda3/envs/myenv/lib/python3.11/site-packages/gpytorch/likelihoods/gaussian_likelihood.py:300: GPInputWarning: You have passed data through a FixedNoiseGaussianLikelihood that did not match the size of the fixed noise, *and* you did not specify noise. This is treated as a no-op.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval() # calculates latent variable 'f' (logits) bcoz we used DirichletGP\n",
     "likelihood.eval()\n",
@@ -750,32 +759,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate expected value of class probabilites; this is done by sampling 256 points and taking average\n",
-    "pred_samples = test_dist.sample(torch.Size((1024,))).exp()\n",
+    "pred_samples = test_dist.sample(torch.Size((256,))).exp()\n",
     "probabilities = (pred_samples / pred_samples.sum(-2, keepdim=True)).mean(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of being in class 0 (infeasible) =  [0.17156303 0.20171477 0.1142856  0.19792654 0.04563678 0.03361584\n",
-      " 0.09982245 0.1232381  0.08654256 0.0642149  0.04629537 0.11668666\n",
-      " 0.05815212 0.04215981 0.22124508 0.03609996 0.04792694 0.1551127\n",
-      " 0.02259498 0.24329813]\n",
-      "Probability of being in class 1 (feasible) =  [0.828437   0.79828525 0.88571435 0.8020735  0.9543632  0.9663842\n",
-      " 0.9001776  0.8767619  0.9134574  0.93578506 0.95370466 0.8833133\n",
-      " 0.9418479  0.95784014 0.77875495 0.9639001  0.95207304 0.84488726\n",
-      " 0.977405   0.7567019 ]\n"
+      "Probability of being in class 0 (infeasible) =  [4.0038440e-01 9.7921973e-01 9.7382092e-01 9.8655182e-01 4.1667842e-03\n",
+      " 1.7682714e-03 3.0593851e-01 2.1404671e-02 9.4481315e-03 4.2284457e-03\n",
+      " 2.0052942e-03 2.0538809e-02 4.6097967e-03 2.5741879e-03 4.8812684e-01\n",
+      " 3.6331029e-03 6.2005594e-03 9.8075253e-01 4.8856036e-04 9.8486882e-01]\n",
+      "Probability of being in class 1 (feasible) =  [0.5996156  0.02078027 0.02617907 0.01344812 0.9958333  0.9982318\n",
+      " 0.6940614  0.9785953  0.99055195 0.9957716  0.99799466 0.9794612\n",
+      " 0.9953902  0.9974258  0.5118731  0.9963668  0.99379945 0.01924744\n",
+      " 0.9995115  0.01513122]\n"
      ]
     }
    ],
@@ -787,26 +796,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"predicted class = \", pred_means.max(0)[1].item())\n",
-    "# print(\"Experimentally found class = \", y_pd.loc[validation_idx, :].values[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "tensor([1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -846,11 +845,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Comment on alpha-epsilon**\n",
+    "\n",
+    "Dirichlet classification prior needs a parameter $\\alpha_{\\epsilon}$ which is user defined (default is 0.01). Performance of the classification model depends on this parameter. In the original paper, authors say that 0.01 worked for some of the models, which showed a dip the graph of performance-vs-alpha near 0.01. But they also showed that some datasets showed a monotonic improvement in performance as alpha is reduced.\n",
+    "Authors suggested that alpha should be determined by cross-validation."
+   ]
   }
  ],
  "metadata": {
